--- a/overview.mdx
+++ b/overview.mdx
@@ -19,7 +19,7 @@ or events affecting your environment. Use the following information to
   and the tools you can use to manage that data.
 - Explore the [concepts](/overview/concepts) unique to Observability Platform, such
   as the Control Plane, Chronosphere Lens, and how monitors and dashboards operate.
-- Skip the overview and [get started](/overview/get-started.mdx) with using
+- Skip the overview and [get started](/overview/get-started) with using
   Observability Platform.
 
 <PlatformOverviewImage alt="Chronosphere Observability Platform architecture" />
