--- a/pipeline-configure/secrets.mdx
+++ b/pipeline-configure/secrets.mdx
@@ -87,7 +87,7 @@ You can add a secret to an individual pipeline or to a [Core Instance](/pipeline
 Adding a secret to a Core Instance makes that secret available to all pipelines
 associated with that Core Instance.
 
-### Pipelines [#add-secret-pipeline]
+### Pipelines
 
 Use one of the following methods to add a secret to a pipeline.
 
@@ -126,7 +126,7 @@ Replace the following:
 </Tab>
 </Tabs>
 
-### Core Instance [#add-secret-instance]
+### Core Instance
 
 Use one of the following methods to add a secret to a Core Instance.
 
@@ -187,7 +187,7 @@ Before you update a secret, you won't be able to see its current value. Similarl
 after you update a secret, you won't be able to see any of its previous values.
 </Note>
 
-### Pipelines [#update-secret-pipeline]
+### Pipelines
 
 Use one of the following methods to update a secret for a pipeline:
 
@@ -233,7 +233,7 @@ calyptia update pipeline_secret SECRET_ID NEW_VALUE
 </Tab>
 </Tabs>
 
-### Core Instance [#update-secret-instance]
+### Core Instance
 
 Use one of the following methods to update a secret for a Core Instance:
 
