--- a/pipeline-data/troubleshoot.mdx
+++ b/pipeline-data/troubleshoot.mdx
@@ -47,7 +47,7 @@ To troubleshoot pushed-based sources, follow each of these procedures:
 {/* vale Chronosphere.WordList = YES */}
 {/* markdownlint-enable MD051 */}
 
-#### Simplify your pipeline [#simplify-push]
+#### Simplify your pipeline
 
 Simplifying your pipeline can help you narrow down the
 cause of any issues. You can either perform these actions on an existing pipeline,
@@ -128,7 +128,7 @@ To examine your service, host, port, and protocol, perform these steps:
 {/* vale Chronosphere.WordList = NO */}
 {/* vale Chronosphere.Acronyms = NO */}
 
-#### Review firewalls [#firewalls-push]
+#### Review firewalls
 
 To review your firewalls, perform these steps:
 
@@ -170,7 +170,7 @@ To troubleshoot pull-based sources, follow each of these procedures:
 {/* vale Chronosphere.WordList = YES */}
 {/* markdownlint-enable MD051 */}
 
-#### Simplify your pipeline [#simplify-pull]
+#### Simplify your pipeline
 
 Simplifying your pipeline can help you narrow down the
 cause of any issues. You can either perform these actions on an existing pipeline,
@@ -254,7 +254,7 @@ To test connectivity, perform these steps:
 
 {/* vale Chronosphere.WordList = NO */}
 
-#### Review firewalls [#firewalls-pull]
+#### Review firewalls
 
 Confirm there aren't any firewalls blocking outbound traffic from the push-based
 source.
@@ -278,7 +278,7 @@ follow each of these troubleshooting procedures:
 
 {/* markdownlint-enable MD051 */}
 
-### Simplify your pipeline [#simplify-destination]
+### Simplify your pipeline
 
 Simplifying your pipeline can help you narrow down the
 cause of any issues. You can either perform these actions on an existing pipeline,
