--- a/tooling/infrastructure/terraform/release-notes.mdx
+++ b/tooling/infrastructure/terraform/release-notes.mdx
@@ -17,7 +17,7 @@ upgrade to the latest supported version.
 
 <Update label="Version 1.17.0" description="Released 2025.11.03">
 
-### Feature [#features-v1-17-0]
+### Feature
 
 - Add `ROLLING_1_HOUR_VOLUME` and `ROLLING_3_HOUR_VOLUME` thresholds to `chronosphere_consumption_budget` resource.
 
@@ -25,7 +25,7 @@ upgrade to the latest supported version.
 
 <Update label="Version 1.16.0" description="Released 2025.10.22">
 
-### Feature [#features-v1-16-0]
+### Feature
 
 - Add `emit_metrics` and `replace_fields` control rule types to `chronosphere_log_control_config` resource.
 - Add `field_normalization` to `chronosphere_log_ingest_config` resource.
@@ -34,7 +34,7 @@ upgrade to the latest supported version.
 
 <Update label="Version 1.15.0" description="Released 2025.10.14">
 
-### Feature [#features-v1-15-0]
+### Feature
 
 - Add `HOURLY_VOLUME` threshold type to `chronosphere_consumption_budget` resource.
 - Add `alert_action_config` field to `chronosphere_consumption_budget` resource
@@ -44,7 +44,7 @@ upgrade to the latest supported version.
 
 <Update label="Version 1.14.0" description="Released 2025.10.02">
 
-### Feature [#features-v1-14-0]
+### Feature
 
 - Add `azure_metrics_integration` resource for configuring the cloudscraper Azure metrics integration.
 - Add `mode` field to the `chronosphere_drop_rule` resource. This field replaces the
@@ -52,7 +52,7 @@ upgrade to the latest supported version.
   `disabled`, and `preview`. Defaults to `enabled`. The `active` field was `disabled`
   by default.  **This is a breaking change**. 
 
-### Deprecations [#deprecations-v1-14-0]
+### Deprecations
 
 - Deprecate the `active` field in the `chronosphere_drop_rule` resource in favor of the
   `mode` field. This field can't be set to `false`, and is a breaking change that
@@ -62,7 +62,7 @@ upgrade to the latest supported version.
 
 <Update label="Version 1.13.0" description="Released 2025.08.27">
 
-### Feature [#features-v1-13-0]
+### Feature
 
 - Add `chronosphere_log_control_config` resource for configuring log control rules.
 - Replace `drop_original` with `keep_original` in LogIngestConfig parser.
@@ -74,13 +74,13 @@ upgrade to the latest supported version.
 
 <Update label="Version 1.12.0" description="Released 2025.08.05">
 
-### Feature [#features-v1-12-0]
+### Feature
 
 - Add unstable `chronosphere_consumption_config` resource for configuring telemetry partitions.
 - Add unstable `chronosphere_consumption_budget` resource for configuring telemetry data budgets.
 - Update parsing support in `chronosphere_log_ingest_config` resource.
 
-### Deprecations [#deprecations-v1-12-0]
+### Deprecations
 
 - Deprecate `permissive` in `chronosphere_rollup_rule` resource.
 
@@ -88,7 +88,7 @@ upgrade to the latest supported version.
 
 <Update label="Version 1.11.0" description="Released 2025.05.15">
 
-### Feature [#features-v1-11-0]
+### Feature
 
 - Add timeslice indicator support to `chronosphere_slo` resource with `custom_timeslice_indicator` field.
 
@@ -96,11 +96,11 @@ upgrade to the latest supported version.
 
 <Update label="Version 1.10.0" description="Released 2025.04.24">
 
-### Feature [#features-v1-10-0]
+### Feature
 
 - Promotes the `chronosphere_slo` resource from unstable to v1 in the API.
 
-### Deprecations [#deprecations-v1-10-0]
+### Deprecations
 
 - Removed queryless SLO fields from the unstable `chronosphere_slo` resource.
 - Removed `reporting_windows` from the unstable `chronosphere_slo` resource.
@@ -109,13 +109,13 @@ upgrade to the latest supported version.
 
 <Update label="Version 1.9.0" description="Released 2025.04.03">
 
-### Features [#features-v1-9-0]
+### Features
 
 - Add burn rate configs to the unstable `chronosphere_slo` resource.
 - Add SLI level `additional_promql_filters` to the unstable `chronosphere_slo`
   resource.
 
-### Deprecation [#deprecations-v1-9-0]
+### Deprecation
 
 - Deprecated queryless `additional_promql_filters` in unstable `chronosphere_slo`
   resource.
@@ -124,7 +124,7 @@ upgrade to the latest supported version.
 
 <Update label="Version 1.8.0" description="Released 2025.02.28">
 
-### Feature [#features-v1-8-0]
+### Feature
 
 - Adds `priority_thresholds` to `chronosphere_resource_pools_config` pools.
 
@@ -132,14 +132,14 @@ upgrade to the latest supported version.
 
 <Update label="Version 1.7.0" description="Released: 2025.02.13">
 
-### Features [#features-v1-7-0]
+### Features
 
 - Adds support for logging query in the `chronosphere_monitor` resource.
 - Adds support for custom dimension labels in the `chronosphere_slo` resource.
 - Add support for `is_root_span` field in common trace span filter type.
 - Allow disabling dry-run validation using the provider configuration `disable_dryrun`.
 
-### Fix [#fixes-v1-7.0]
+### Fix
 
 - Fix dry-run for `chronosphere_recording_rule` with `bucket_slug` and `execution_group`.
 
@@ -153,7 +153,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 1.6.1" description="Released: 2024.12.04">
 
-### Fixes [#fixes-v1-6-1]
+### Fixes
 
 {/* vale Chronosphere.WordList = NO */}
 
@@ -167,12 +167,12 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 1.6.0" description="Released: 2024.10.31">
 
-### Features [#features-v1-6-0]
+### Features
 
 - Adds support for `labels` in `chronosphere_dashboard`.
 - Allow `chronosphere_notification_policy` resources without a `team_id`.
 
-### Fix [#fixes-v1-6-0]
+### Fix
 
 - Support dry-run validation of Prometheus queries in a monitor that contain
   dynamic expressions, which aren't known at plan time.
@@ -182,7 +182,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 1.5.1" description="Released: 2024.10.08">
 
-### Fixes [#fixes-v1-5-1]
+### Fixes
 
 - Allow creating `chronosphere_slack_notifier` resources with `actions`, without
   the `action_confirm_text` parameter.
@@ -194,12 +194,12 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 1.5.0" description="Released: 2024.08.29">
 
-### Feature [#features-v1-5-0]
+### Feature
 
 - Adds `fixed_value` in `chronosphere_resource_pools_config.pools[].allocation`, which
   lets you specify absolute DPPS per defined pool instead of as a percentage.
 
-### Deprecation [#deprecations-v1-5-0]
+### Deprecation
 
 - Deprecates `allocation` in `chronosphere_resource_pools_config.default_pool`. The
   `default_pool.allocation` is now inferred to be any remaining quota unallocated across
@@ -209,7 +209,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 1.4.3" description="Released: 2024.07.29">
 
-### Features [#features-v1-4-3]
+### Features
 
 - Adds new `chronosphere_logscale_alert` Terraform resource for creating LogScale
   alerts.
@@ -227,7 +227,9 @@ This release contains no user-facing changes in behavior or function.
 
 </Update>
 
-<Update label="Version 1.2.0" description="### Features [#features-v1-2-0]">
+<Update label="Version 1.2.0" >
+
+### Features
 
 - Adds server-side validation support for `chronosphere_trace_metrics_rule`.
 - Adds `group_by` to `notification_routes` in `notification_policy` resources.
@@ -236,16 +238,16 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 1.1.0" description="Released: 2024.06.12">
 
-### Feature [#features-v1-1-0]
+### Feature
 
 - Add server-side validation support for `chronosphere_trace_tail_sampling_rules`
 
-### Deprecations [#deprecations-v1-1-0]
+### Deprecations
 
 - Deprecates `proxy_url` in alert receivers.
 - Deprecates `chronosphere_mapping_rule.drop_timestamp`.
 
-### Fix [#fixes-v1-1-0]
+### Fix
 
 - Fixes an issue where `chronosphere_resource_pools_config` would not allow certain combinations
   of allocation percents due to float arithmetic not adding to exactly 100 percent. The provider
@@ -270,7 +272,7 @@ registry. For instructions on installing older versions, see
 This version removes deprecated and unsupported features. To avoid issues, review
 these release notes before upgrading.
 
-### Features [#features-v1-0-0]
+### Features
 
 - Adds data source for `chronosphere_collection`.
 - Adds support for `drop_nan_value` in `chronosphere_drop_rule` resource.
@@ -280,11 +282,11 @@ these release notes before upgrading.
 - Adds support for `graphite_label_policy` in `chronosphere_rollup_rule` resource.
 - Adds new `IN` and `NOT_IN` support for tracing matchers.
 
-### Fix [#fixes-v1-0-0]
+### Fix
 
 - Fix `chronosphere_rollup_rule` migration from `storage_policies` to `interval`.
 
-### Removals [#removals-v1-0-0]
+### Removals
 
 - Prevents unsupported use of duplicate routes with the same severity in
   `chronosphere_notification_policy`.
@@ -300,7 +302,7 @@ these release notes before upgrading.
 - Removes deprecated resource `chronosphere_grafana_dashboard` in favor of
   `chronosphere_classic_dashboard`.
 
-### Deprecation [#deprecations-v1-0-0]
+### Deprecation
 
 - Deprecates `chronosphere_rollup_rule.storage_policies` and
   `chronosphere_mapping_rule.storage_policy`, and recommends `interval`.
@@ -323,7 +325,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.45.0" description="Released: 2024.01.18">
 
-#### Features [#features-v0-45-0]
+#### Features
 
 - Updates `chronosphere_collection` to make `team_id` optional.
 - Adds `regex` match type for trace metrics filters.
@@ -333,7 +335,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.44.0" description="Released: 2023.12.13">
 
-#### Features [#features-v0-44-0]
+#### Features
 
 - Adds new `chronosphere_service` data source for services, which associates monitors
   with dashboards in service collections.
@@ -342,7 +344,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.43.0" description="Released: 2023.11.30">
 
-#### Features [#features-v0-43-0]
+#### Features
 
 - Adds new resource `chronosphere_classic_dashboard`.
 
@@ -350,7 +352,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.42.0" description="Released: 2023.11.15">
 
-#### Features [#features-v0-42-0]
+#### Features
 
 - Adds support for the `resolve_sustain` field in monitor threshold conditions.
 - Adds `numeric_value` in span filter tags used in `chronosphere_trace_tail_sampling_rules`
@@ -358,7 +360,7 @@ This release contains no user-facing changes in behavior or function.
 - Adds the attributes `name` and `system_name` to `chronosphere_trace_tail_sampling_rules`.
 - Adds `chronotf import-state` ownership transfers for `chronosphere_resource_pools_config`.
 
-#### Fixes [#fixes-v0-42-0]
+#### Fixes
 
 - Fixes bug that caused `terraform plan` to fail when converting a notification
   policy from inline to independent.
@@ -379,7 +381,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.39.0" description="Released: 2023.09.05">
 
-#### Features [#features-v0-39-0]
+#### Features
 
 - Update a monitor when changing its `bucket_id` instead of forcibly deleting and
   recreating it.
@@ -388,7 +390,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.38.0" description="Released: 2023.08.28">
 
-#### Features [#features-v0-38-0]
+#### Features
 
 - Add `unrestricted`, `email`, and `slug` support to `chronosphere_service_account`.
 - Add new required one\_of between `unrestricted` and `restriction` to
@@ -396,7 +398,7 @@ This release contains no user-facing changes in behavior or function.
 - Add support for the `description` field on Teams.
 - Add a new enumerator `DISTRIBUTION` to the metric types for rollup rules.
 
-#### Fixes [#fixes-v0-38-0]
+#### Fixes
 
 - Fix an unexpected diff after applying a notification policy in the `notification_policy_data`
   field.
@@ -407,7 +409,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.37.0" description="Released: 2023.07.26">
 
-#### Features [#features-v0-37-0]
+#### Features
 
 - Promote `Dashboard` resource for general availability.
 - Add `Dashboard` support to `chronotf export-config` and `chronotf import-state`.
@@ -416,7 +418,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.36.0" description="Released: 2023.06.23">
 
-#### Features [#features-v0-36-0]
+#### Features
 
 - Make `name_mappings` optional for `derived_label` resources.
 - Add `interval` field to `mapping_rule` and `rollup_rule` resources.
@@ -424,7 +426,7 @@ This release contains no user-facing changes in behavior or function.
 - Add `chronotf export-config` support for Grafana dashboards with `--include-grafana-dashboards`,
   which exports dashboard JSON content to separate files.
 
-#### Fixes [#fixes-v0-36-0]
+#### Fixes
 
 - Remove `one_of` between `service_key` and `routing_key` for PagerDuty notifiers.
 
@@ -432,14 +434,14 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.35.0" description="Released: 2023.05.10">
 
-#### Features [#features-v0-35-0]
+#### Features
 
 - Increase speed of reading from data source buckets.
 - Hide Chronosphere-internal resources from `chronotf export-config`.
 - Add support to update `bucket_id` in place using `chronosphere_mapping_rule`,
   `chronosphere_recording_rule`, and `chronosphere_rollup_rule`.
 
-#### Fixes [#features-v0-35-0]
+#### Fixes
 
 - Fix `chronotf export-config` not exporting all buckets.
 - Fix `chronotf import-state` timeout errors when importing a large number of resources.
@@ -449,7 +451,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.34.0" description="Released: 2023.04.07">
 
-#### Features [#features-v0-34-0]
+#### Features
 
 - Explicitly ask to set remote resource ownership to Terraform when running
   `chronotf import-state` instead of changing ownership automatically.
@@ -457,7 +459,7 @@ This release contains no user-facing changes in behavior or function.
 - Remove redundant logs from `chronotf import-state` output.
 - Enhance error messages by always showing HTTP verb, URL, status code, and body.
 
-#### Fixes [#fixes-v0-34-0]
+#### Fixes
 
 - Allow Terraform updates to modify a notifier's type instead of returning an error
   if the notifier's type changed on the server.
@@ -467,7 +469,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.33.0" description="Released: 2023.03.29">
 
-#### Feature [#features-v0-33-0]
+#### Feature
 
 - Enable dry run validation support for collections, derived metrics, derived labels,
   drop rules, recording rules, teams, classic dashboards, and buckets.
@@ -476,7 +478,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.32.0" description="Released: 2023.03.23">
 
-#### Feature [#features-v0-32-0]
+#### Feature
 
 - Import-state and export-config for ResourcePoolsConfig.
 
@@ -484,7 +486,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.31.0" description="Released: 2023.03.15">
 
-#### Feature [#features-v0-31-0]
+#### Feature
 
 - Add support for managing derived labels, using the `chronosphere_derived_label`
   resource.
@@ -493,7 +495,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.30.0" description="Released: 2023.03.09">
 
-#### Feature [#features-v0-30-0]
+#### Feature
 
 - Improved whitespace formatting in `chronotf export-config`.
 
@@ -501,13 +503,13 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.29.0" description="Released: 2023.02.27">
 
-#### Features [#features-v0-29-0]
+#### Features
 
 - Enable dry run validation support for notification policies, mapping rules, and
   rollup rules.
 - Add support to filter `chronotf export-config` by slugs.
 
-#### Fix [#fixes-v0-29-0]
+#### Fix
 
 - Fix exporting of buckets with notification policies that have a mismatched slug.
 
@@ -515,7 +517,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.28.0" description="Released: 2023.02.03">
 
-#### Features [#features-v0-28-0]
+#### Features
 
 - Enable server-side dry run validation for monitor resources.
 - Add system ownership support for mapping rules, roll-up rules, recording rules,
@@ -532,14 +534,14 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.23.1" description="Released: 2022.11.29">
 
-#### Features [#features-v0-23-1]
+#### Features
 
 - Add support for managing service accounts, using the `chronosphere_service_account`
   resource.
 - Add support for managing multiple match rules, using the `chronosphere_resource_pools_config`
   resource.
 
-#### Fixes [#fixes-v0-23-1]
+#### Fixes
 
 - `chronotf export-config` and `import-state` correctly support all recording rules
   and roll-up rules.
@@ -555,11 +557,11 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.22.0" description="Released: 2022.10.11">
 
-#### Feature [#features-v0-22-0]
+#### Feature
 
 - Improve formatting of drop rules when exporting configurations.
 
-#### Fix [#fixes-v0-22-0]
+#### Fix
 
 - Rename `value_based_drop_policy` to `value_based_drop`.
 
@@ -567,11 +569,11 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.21.0" description="Released: 2022.10.11">
 
-#### Feature [#features-v0-21-0]
+#### Feature
 
 - Add support for value-based decisions in drop rules.
 
-#### Fix [#fixes-v0-21-0]
+#### Fix
 
 - Correctly import buckets nested in a module.
 - Fix `chronotf import-state` re-importing resources that are already managed by
@@ -581,7 +583,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.20.0" description="Released: 2022.09.27">
 
-#### Feature [#features-v0-20-0]
+#### Feature
 
 - Drop empty fields when exporting email alert notifiers in `chronotf export-config`.
 
@@ -589,11 +591,11 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.19.0" description="Released: 2022.09.07">
 
-#### Feature [#features-v0-19-0]
+#### Feature
 
 - Add `permissive` field to `chronosphere_rollup_rule` resources.
 
-#### Fix [#fixes-v0-19-0]
+#### Fix
 
 - Change `chronosphere_notification_policy.route.notifiers` to a TypeSet to prevent
   ordering diffs.
@@ -603,7 +605,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.18.1" description="Released: 2022.08.23">
 
-#### Fix [#fixes-v0-18-1]
+#### Fix
 
 - Don't show unnecessary diffs for monitor conditions.
 
@@ -611,20 +613,20 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.18.0" description="Released: 2022.08.23">
 
-#### Features [#features-v0-18-0]
+#### Features
 
 - Add support for monitors that use a `NOT_EXISTS` condition without a value.
 - Improve diffs to schedules in `chronosphere_monitor` resources.
 - Improve diffs for changes to complex objects in a list, such as monitor schedules,
   mapping rule storage policies, and monitor label matchers.
 
-#### Fixes [#fixes-v0-18-0]
+#### Fixes
 
 - Don't show unnecessary diffs to empty labels on buckets.
 - Don't update the Terraform state on update errors.
 - Remove incorrect log when importing notification policies with overrides.
 
-#### Deprecation [#deprecations-v0-18-0]
+#### Deprecation
 
 - `chronosphere_notification_policy.rule` is now deprecated. Use `route` instead.
 
@@ -632,11 +634,11 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.17.0" description="Released: 2022.07.26">
 
-#### Feature [#features-v0-17-9]
+#### Feature
 
 - Add support for monitors using an `EXISTS` condition without a value.
 
-#### Fixes [#fixes-v0-17-0]
+#### Fixes
 
 - Fix notification policy bugs that report changes immediately after an apply.
 - Fix `activated_drop_duration` in drop rules showing unexpected changes after
@@ -646,7 +648,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.16.0" description="Released: 2022.06.21">
 
-#### Features [#features-v0-16-0]
+#### Features
 
 - Add support for managing teams, using the `chronosphere_team` resource.
 - Add support for slug in all notifiers.
@@ -656,7 +658,7 @@ This release contains no user-facing changes in behavior or function.
 - Make `storage_policies` optional for roll-up rules.
 - Add support for `DELTA` roll-up rules without a new metric name.
 
-#### Fix [#fixes-v0-16-0]
+#### Fix
 
 - Handle 404 as success when attempting to delete an already-deleted resource.
 
@@ -664,7 +666,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.15.0" description="Released: 2022.05.10">
 
-#### Features [#features-v0-15-0]
+#### Features
 
 - Add support for `drop_raw` with roll-up rules.
 - Add support for `slug` with `chronosphere_bucket` resources.
@@ -673,7 +675,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.14.1" description="Released: 2022.04.26">
 
-#### Fix [#fixes-v0-14-1]
+#### Fix
 
 - Fix an issue with webhook notifiers using `bearer_token`.
 
@@ -681,28 +683,28 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.14.0">
 
-#### Feature [#features-v0-14-0]
+#### Feature
 
 - Recording rules now support independent specification of the target `metric_name`.
 - Add support for `repeat_interval` in the `chronosphere_notification_policy`
   resource.
 - `chronotf` now handles exporting drop rule configuration.
 
-#### Fixes [#fixes-v0-14-0]
+#### Fixes
 
 - Correctly handle the case of a notification policy introduced using the UI.
 </Update>
 
 <Update label="Version 0.13.0">
 
-#### Feature [#features-v0-13-0]
+#### Feature
 
 - Add support for new resources for distributed tracing.
 </Update>
 
 <Update label="Version 0.12.0" description="Released: 2022.03.11">
 
-#### Features [#features-v0-12-0]
+#### Features
 
 {/* vale Chronosphere.WordList = NO */}
 
@@ -715,7 +717,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.11.0" description="Released: 2022.02.24">
 
-#### Fixes [#fixes-v0-11-0]
+#### Fixes
 
 - Fix an issue sending `chronosphere_export_job` on updates.
 
@@ -723,7 +725,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.10.0" description="Released: 2022.02.17">
 
-#### Feature [#features-v0-10-0]
+#### Feature
 
 - Add support for managing mapping rules, using the `chronosphere_mapping_rule`
   resource.
@@ -732,12 +734,12 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.9.0" description="Released: 2022.02.03">
 
-#### Features [#features-v0-9-0]
+#### Features
 
 - Allow selecting a notification policy for a monitor independent of the bucket.
 - Add support for new stat namespace in `chronosphere_export_job` resource.
 
-#### Fixes [#fixes-v0-9-0]
+#### Fixes
 
 - Import and export support for buckets without a notification policy.
 
@@ -745,12 +747,12 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.8.0" description="Released: 2022.01.27">
 
-#### Features [#features-v0-8-0]
+#### Features
 
 - Add support for managing drop rules, using the `chronosphere_drop_rule` resource.
 - Add support for specifying durations in Prometheus format (support for d/w/y suffixes).
 
-#### Fixes [#fixes-v0-8-0]
+#### Fixes
 
 - Fix panic when org name is incorrectly specified.
 - Fix `chronotf import-state` errors regarding unresolved references with recent
@@ -760,11 +762,11 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.7.0" description="Released: 2021.12.17">
 
-#### Feature [#features-v0-7-0]
+#### Feature
 
 - Add support for VictorOps alert notifications.
 
-#### Fixes [#fixes-v0-7-0]
+#### Fixes
 
 - Correctly handle converting Chronosphere slugs to Terraform IDs. Escape strings
   to support quotes and other special characters.
@@ -773,12 +775,12 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.6.0" description="Released: 2021.11.12">
 
-#### Feature [#features-v0-6-0]
+#### Feature
 
 - Add support for managing Opsgenie notifiers, using the `chronotf export-config`
   resource.
 
-#### Fixes [#fixes-v0-6-0]
+#### Fixes
 
 - Fix an issue where objects deleted outside of Terraform caused the provider
   to error out.
@@ -792,7 +794,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.5.3" description="Released: 2021.10.28">
 
-#### Feature [#features-v0-5-3]
+#### Feature
 
 - Add support for managing roll-up rules, using the `chronosphere_rollup_rule`
   resource.
@@ -801,7 +803,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.5.2" description="Released: 2021.10.14">
 
-#### Fixes [#fixes-v0-5-2]
+#### Fixes
 
 - Fix escaping of quotes for `chronotf export-config`.
 
@@ -809,7 +811,7 @@ This release contains no user-facing changes in behavior or function.
 
 <Update label="Version 0.5.1" description="Released: 2021.10.14">
 
-#### Feature [#features-v0-5-1]
+#### Feature
 
 - Add support for managing recording rules, using the `chronosphere_recording_rule`
   resource.
