--- a/tooling/infrastructure/terraform/install.mdx
+++ b/tooling/infrastructure/terraform/install.mdx
@@ -139,15 +139,21 @@ Linux and macOS.
 
 1. Download the `darwin_amd64` build of `chronotf`:
 
-   <code>curl -LO {chronotfMacOSIntelLink}</code>
+   ```sh
+   curl -LO https://storage.googleapis.com/chronosphere-terraform/1.12.0/chronotf_1.12.0_darwin_amd64
+   ```
 
 1. Make the `chronotf` binary executable.
 
-   <code>chmod +x {chronotfMacOSIntel}</code>
+   ```sh
+   chmod +x chronotf_1.12.0_darwin_amd64
+   ```
 
 1. Move the binary into your `PATH`:
 
-   <code>sudo mv {chronotfMacOSIntel} /usr/local/bin/chronotf</code>
+   ```sh
+   sudo mv chronotf_1.12.0_darwin_amd64 /usr/local/bin/chronotf
+   ```
 
    If you don't have permission to install to `/usr/local/bin`, replace it with
    another directory in your `PATH`.
@@ -163,15 +169,21 @@ Linux and macOS.
 
 1. Download the `darwin_arm64` build of `chronotf`:
 
-   <code>curl -LO {chronotfMacOSARMLink}</code>
+   ```sh
+   curl -LO https://storage.googleapis.com/chronosphere-terraform/1.12.0/chronotf_1.12.0_darwin_arm64
+   ```
 
 1. Make the `chronotf` binary executable:
 
-   <code>chmod +x {chronotfMacOSARM}</code>
+   ```sh
+   chmod +x chronotf_1.12.0_darwin_arm64
+   ```
 
 1. Move the binary into your `PATH`:
 
-   <code>sudo mv {chronotfMacOSARM} /usr/local/bin/chronotf</code>
+   ```sh
+   sudo mv chronotf_1.12.0_darwin_arm64 /usr/local/bin/chronotf
+   ```
 
    If you don't have permission to install to `/usr/local/bin`, replace it with
    another directory in your `PATH`.
@@ -187,15 +199,21 @@ Linux and macOS.
 
 1. Download the `linux_amd64` build of `chronotf`:
 
-   <code>curl -LO {chronotfLinuxLink}</code>
+   ```shell
+   curl -LO https://storage.googleapis.com/chronosphere-terraform/1.12.0/chronotf_1.12.0_linux_amd64
+   ```
 
 1. Make the `chronotf` binary executable:
 
-   <code>chmod +x {chronotfLinux}</code>
+   ```shell
+   chmod +x chronotf_1.12.0_linux_amd64
+   ```
 
 1. Move the binary into your `PATH`:
 
-   <code>mv {chronotfLinux} /usr/local/bin/chronotf</code>
+   ```shell
+   mv chronotf_1.12.0_linux_amd64 /usr/local/bin/chronotf
+   ```
 
 1. Test the `chronotf` installation by running it:
 
